--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   shared_preferences: ^2.3.2
   equatable: ^2.0.5
+  path_provider_android: ^2.2.12
 
 dev_dependencies:
   flutter_test:
