--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.3.2
   equatable: ^2.0.5
   path_provider_android: ^2.2.12
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
